@@ -421,7 +421,7 @@ module Avro::IPC
     end
 
     def write_buffer_length(n)
-      bytes_sent = sock.write([n].pack('I'))
+      bytes_sent = sock.write([n].pack('N'))
       if bytes_sent == 0
         raise ConnectionClosedException.new("socket sent 0 bytes")
       end
@@ -432,7 +432,7 @@ module Avro::IPC
       if read == '' || read == nil
         raise ConnectionClosedException.new("Socket read 0 bytes.")
       end
-      read.unpack('I')[0]
+      read.unpack('N')[0]
     end
 
     def close
